Fix layout of Palmeiras page on smaller screens.

--- a/css/style.css
+++ b/css/style.css
@@ -188,8 +188,10 @@ h2.page-heading {
 
 /* PALMEIRA STYLES */
 
-.palmeiras {
-  margin-left: -30px;
+@media screen and (min-width: 1200px) {
+  .palmeiras {
+    margin-left: -30px;
+  }
 }
 
 .palmeiras hr {
